[package]
name = "tacacs-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["dep:futures", "dep:thiserror"]

[dependencies]
ascii = "1.0.0"
bitflags = { version = "2.4.2" }
futures = { version = "0.3.21", optional = true }
rand = { version = "0.8.5", default-features = false }
thiserror = { version = "1.0.31", optional = true }
