[package]
name = "tacacs-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["byteorder/std", "num_enum/std"]
docsrs = []

[dependencies]
bitflags = { version = "2.4.2" }
byteorder = { version = "1.5.0", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
getset = { version = "0.1.2" }

[dev-dependencies]
tinyvec = { version = "1.6.1", features = ["rustc_1_57"] }
