[package]
name = "tacacs-plus-protocol"
version = "0.3.1"
authors = ["Zane Othman <zothman@cpacketnetworks.com>"]
edition = "2021"
description = "no-std/no-alloc TACACS+ (RFC8907) protocol packet de/serialization"
repository = "https://github.com/cPacketNetworks/tacacs-plus-rs"
license = "MPL-2.0"
rust-version = "1.70"

keywords = ["tacacs", "tacacs+", "rfc8907", "aaa"]
categories = [
    "network-programming",
    "no-std::no-alloc",
    "authentication",
    "parser-implementations",
]

# show badges for std-only types/etc.
[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["byteorder/std", "num_enum/std", "md-5/std"]

[dependencies]
bitflags = { version = "2.4.2" }
byteorder = { version = "1.5.0", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
getset = { version = "0.1.2" }
md-5 = { version = "0.10.6", default-features = false }

[dev-dependencies]
tinyvec = { version = "1.6.1", features = ["rustc_1_57"] }
