[package]
name = "tacacs-plus"
version = "0.1.0"
edition = "2021"
exclude = ["assets"]

[features]
docsrs = []

[dependencies]
futures = "0.3.30"
rand = "0.8.5"
thiserror = "1.0.63"
tacacs-plus-protocol = { version = "0.1.0", path = "../tacacs-plus-protocol" }
byteorder = "1.5.0"
md-5 = "0.10.6"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.39.1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
] }
tokio-util = { version = "0.7.11", features = ["compat"] }
async-net = "2.0.0"
