[package]
name = "tacacs-plus"
version = "0.3.0"
authors = ["Zane Othman <zothman@cpacketnetworks.com>"]
edition = "2021"
description = "An asynchronous, runtime-independent RFC8907 TACACS+ client"
repository = "https://github.com/cPacketNetworks/tacacs-plus-rs"
license = "MPL-2.0"

keywords = ["tacacs", "tacacs+", "rfc8907", "client", "aaa"]
categories = ["network-programming", "asynchronous", "authentication"]

[dependencies]
futures = "0.3.30"
rand = "0.8.5"
thiserror = "1.0.63"
tacacs-plus-protocol = { version = "0.3.0", path = "../tacacs-plus-protocol" }
byteorder = "1.5.0"
md-5 = "0.10.6"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.39.1", features = [
    "rt",
    "net",
    "time",
    "macros",
    "process",
] }
tokio-util = { version = "0.7.11", features = ["compat"] }
async-net = "2.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
